# UniversalBlockchainNetwork

./:   head -20  .env.example  .gitignore  AuraVisualizer.html  CRITICAL_5_PERCENT_ANALYSIS.md  Cargo.toml  DEPLOYMENT_GUIDE.md  DISTRIBUTED_COMPUTING_FRAMEWORK.md  ENGINE_SHELL_ENCRYPTION.md  LAYER_8_POLYMORPHIC_MATRIX.md  MOBILE_MESH_GUIDE.md  PRODUCTION_COMPLETION_ROADMAP.md  PROJECT_GENESIS_RECORD.md  PROJECT_INDEX.md  PROJECT_REQUIREMENTS_AND_PLANNING.md  QUICKSTART.md  README.md  SECURITY_DEPLOYMENT_PROTOCOL.md  STRATEGIC_DEVELOPMENT_ROADMAP.md  Settings.toml  USER_SOVEREIGNTY_FRAMEWORK.md  cargo_check.json  cleanup_and_push.bat  computation_test.py  fix_and_push.bat  google8c034b626ad97330 (1).html  hardhat.config.js  package-lock.json  package.json  setup_git.bat  setup_screensaver.bat  start_aura_engine.bat
scripts/: deploy.js
src/: aura_protocol.rs  bridge_node.rs  config.rs  contract_integration.rs  crypto.rs  economic_engine.rs  engine_shell.rs  errors.rs  gpu_processor.rs  ipc.rs  lending_pools.rs  lib.rs  main.rs  mesh.rs  mesh_routing.rs  mesh_topology.rs  mesh_validation.rs  p2p.rs  polymorphic_matrix.rs  secure_execution.rs  shared_types.rs  store_forward.rs  sync.rs  task_distributor.rs  token_registry.rs  transaction_queue.rs  validator.rs  web3.rs  white_noise_crypto.rs
src/contracts/: AuraProtocol.sol
src/services/: anti_analysis_service.rs  anti_analysis_service_adapter.rs  chaos_encryption_service.rs  chaos_service_adapter.rs  economic_business_services.rs  economic_service_adapter.rs  engine_shell_service.rs  gpu_business_services.rs  gpu_service_adapter.rs  matrix_service_adapter.rs  mesh_business_services.rs  mesh_service_adapter.rs  mod.rs  polymorphic_matrix_service.rs  secret_recipe_service.rs  security_orchestration_service.rs  security_service_adapter.rs  service_runtime.rs  shell_service_adapter.rs  sync_business_services.rs  sync_service_adapter.rs  validation_business_services.rs  validation_service_adapter.rs
src/shaders/: benchmark.wgsl  compute.wgsl
test/: AuraProtocol.test.js
tests/: integration_tests.rs  mesh_integration.rs  polymorphic_matrix_tests.rs  service_integration_test.rs
